# cpkmetrics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  READMe.md  process_capability.py  pyproject.toml
.github/workflows/: codequality.yml  test.yml  typecheck.yml
examples/: basic.py  basic_dict.py  sample_input.csv  sample_output.csv  single_values.py  use_with_dataframes.py
src/: process_capability.py
src/cpkmetrics/: process_capability.py
src/cpkmetrics/utils/: tableprinter.py
src/utils/: tableprinter.py
tests/: test_process_capability.py
utils/: tableprinter.py
